<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="logo">Logo</string>
	<string name="RecherchePatient">Recherche Patient</string>
	<string name="Saisirdossier">Saisir un dossier</string>
	<string name="Telechargerdossier">Télécharger </string>
	<string name="Consulterdossier">Consulter dossier</string>
	<string name="Consultermessagerie">Messagerie</string>
	<string name="HealthContentManager">Health Content Manager</string>
	
	
	<string name="Login">Login</string>
	<string name="Password">Password</string>
	<string name="senregistrer">S\'enregistrer</string>
	<string name="mdpconfirmation">Confirmer mdp</string>
	<string name="statut">Statut Utilisateur</string>
	<string name="refresh">Rafraichir</string>
	<string name="settings">Configuration</string>
	<string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="recherche"> Rechercher</string>
    <string name="prenompatient"> Prenom </string> 
    <string name="nompatient"> Nom </string>
    
    <string name="nomPatient">Nom Patient</string>
    <string name="prenomPatient">Prenom Patient</string>  
    <string name="dateNaissPatient">Date de naissance Patient</string>
    <string name="adressePatient">adresse Patient</string>
    <string name="EmailPatient">Email Patient</string>
    <string name="NumeroSecuritesocialePatient">Numero Securite Social Patient</string>
    <string name="NumeroTelphonePatient">Numero tel Patient</string>
    <string name="TelephoneUrgencePatient">Telephone Urgence</string>
    <string name="nomTuteurPatient">Nom Tuteur patient</string>
    <string name="prenomTuteurPatient">Prenom Tuteur Patient</string>
    <string name="TelephoneTuteur">Telephone Tuteur </string>
    <string name="enregistrer_Patient">Enregistre Patient </string>
    
</resources>
