<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bluefonce1"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundgradient"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_action_searchpatient" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="37dp"
                android:text="@string/nompatient"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/bluefonce2" />

            <EditText
                android:id="@+id/nom_patient"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:background="@color/grislight2"
                android:clickable="false"
                android:duplicateParentState="false"
                android:ems="10"
                android:inputType="textCapSentences|textAutoCorrect"
                android:longClickable="false"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableRow1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="20dp"
                android:text="@string/prenompatient"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/bluefonce2" />

            <EditText
                android:id="@+id/prenom_patient"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:background="@color/grislight2"
                android:clickable="false"
                android:duplicateParentState="false"
                android:ems="10"
                android:inputType="textCapSentences|textAutoCorrect"
                android:longClickable="false"
                android:singleLine="true" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_below="@id/tableRow2"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingLeft="80dp" >

            <Button
                android:id="@+id/button_recherche"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/vertjauneclaire3"
                android:paddingRight="20dp"
                android:text="@string/recherche"
                android:textColor="@color/bleuhopital2"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>